logs/django-boundaryservice.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boundaryservice'...
Listing './lib/python3.5/site-packages/boundaryservice/management'...
Listing './lib/python3.5/site-packages/boundaryservice/management/commands'...
Compiling './lib/python3.5/site-packages/boundaryservice/models.py'...
***   File "./lib/python3.5/site-packages/boundaryservice/models.py", line 22
    if self.slug == '': raise ValueError, "Slug may not be blank [%s]" % str(self)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Compiling './lib/python3.5/site-packages/dateutil/easter.py'...
***   File "./lib/python3.5/site-packages/dateutil/easter.py", line 55
    raise ValueError, "invalid method"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/parser.py'...
***   File "./lib/python3.5/site-packages/dateutil/parser.py", line 158
    l.append("%s=%s" % (attr, `value`))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/relativedelta.py'...
***   File "./lib/python3.5/site-packages/dateutil/relativedelta.py", line 118
    raise TypeError, "relativedelta only diffs datetime/date"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/rrule.py'...
***   File "./lib/python3.5/site-packages/dateutil/rrule.py", line 55
    raise ValueError, "Can't create weekday with n == 0"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/tz.py'...
***   File "./lib/python3.5/site-packages/dateutil/tz.py", line 78
    `self._name`,
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/django_boundaryservice-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/django_tastypie-0.9.9.egg-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-1.5.egg-info'...
Listing './lib/python3.5/site-packages/python_digest'...
Compiling './lib/python3.5/site-packages/python_digest/utils.py'...
***   File "./lib/python3.5/site-packages/python_digest/utils.py", line 242
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_digest-1.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tastypie'...
Compiling './lib/python3.5/site-packages/tastypie/resources.py'...
***   File "./lib/python3.5/site-packages/tastypie/resources.py", line 188
    except (BadRequest, ApiFieldError), e:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tastypie/templates'...
Listing './lib/python3.5/site-packages/tastypie/templates/tastypie'...
Listing './lib/python3.5/site-packages/tastypie/utils'...
Compiling './lib/python3.5/site-packages/tastypie/utils/validate_jsonp.py'...
***   File "./lib/python3.5/site-packages/tastypie/utils/validate_jsonp.py", line 207
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 709-712: truncated \uXXXX escape

Listing './share'...
Listing './share/python-wheels'...
